Update to Survey Functions
- ct() now sorts columns largest to smallest by default.
- ctable() now allows font size adjustments (container CSS)
- Fixes to MultiCoding() & mc_ftw().
- battery_ftw() allows you to specify a Questions dataframe, rather than assuming it's called "Questions" and only allowing you to opt-out.
- frq_g_simple() allows colour specification.

--- a/R/Code/Dynamic Crosstabs (Tabsets).Rmd
+++ b/R/Code/Dynamic Crosstabs (Tabsets).Rmd
@@ -14,7 +14,7 @@ library(readxl)
 library(DT)
 
 # Let's grab my survey functions, since this relies on some of them.
-source("S:/Institutional_Research/.Staff & Admin/Professional Development/CIRPA/GitHub/codeshare/R/Code/Survey Data Functions.R")
+devtools::source_url("https://github.com/cirpa-acpri/codeshare/blob/master/R/Code/Survey%20Data%20Functions.R?raw=TRUE")
 ```
 
 ## Dataset
