Updates and such
Rejigging and checking

--- a/R/Code/Survey Data Functions - Examples.Rmd
+++ b/R/Code/Survey Data Functions - Examples.Rmd
@@ -1,23 +1,26 @@
 ---
-title: "Demonstrating the Survey Data Functions"
+title: "Demonstrating Some Survey Data Functions"
 author: "Fraser Hay"
-date: "10/14/2020"
+date: "Last Updated: 01/27/2020"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE)
+library(knitr)
 
 source("Survey Data Functions.R")
 
 data = mpg
 ```
 
-These functions are basically all designed to deal with categorical data.
+These functions are basically all designed to deal with categorical data, mainly because we typically deal with nominal/ordinal data from Qualtrics.
 
-You may notice a variety of my code chunks here have warnings or messages disabled. This is more or less because I don't really know how to stop them. (I've tried all_of() for select, for example; still get the message.) Feel free to advise.
+<br>
 
-### Frequency Table, Weighted
+## Frequency Table, Weighted
+
+A frequency table that takes weights into account, if specified.
 
 ```{r, message=FALSE}
 ftw(data, "manufacturer")
@@ -27,15 +30,19 @@ x = ftw(data, "manufacturer")
 
 It appears that `r pct_format(x[1,3], decimals = 1)` of the observations in the mpg dataset relate to `r x[1,1]` cars.
 
-### Frequency Graph - Simple
+<br>
 
-```{r}
+## Frequency Graph - Simple
+
+```{r, fig.height=5.5}
 frq_g_simple(x, "A Simple Graph of mpg manufacturers")
 ```
 
 As most of us tend to do, I'm supposing: for frq_g_simple() we came up with a ggplot config that we liked, parameterized a few key aspects, and just kept using it over and over again.
 
-### Crosstabulation
+<br>
+
+## Crosstabulation
 
 Cross-tabs are basically our bread and butter - we employ them on virtually every question we report on. Mostly this is because our international department - for good reasons, typically - knows their students tend to differ from their domestic counterparts.
 
@@ -45,7 +52,7 @@ But back to the data at-hand, about cars.
 ct(data, "year", "class")
 ```
 
-It looks like SUVs were more popular in 2008. 
+It looks like SUVs were notably more popular in 2008. 
 
 But what percentage of our data was that?
 
@@ -54,23 +61,28 @@ But what percentage of our data was that?
 ct(data, "year", "class", pct = TRUE)
 # Or you can call row_percents() on the ct() base frequency output.
 row_percents(ct(data, "year", "class"))
-y = row_percents(x)
+y = ct(data, "year", "class", pct = TRUE) %>% 
+  .[3,"suv"]
 ```
 
-`r pct_format(y[3,ncol(y)], decimals = 1)` of the 2008 sample were SUVs.
+`r pct_format(y, decimals = 1)` of the 2008 sample were SUVs.
 
-### Crosstabulation: Rendering
+<br>
+
+## Crosstabulation: Rendering
 
 Crosstabs are far more interesting in our "patented" ctable() DT rendering, since then you can see chi-square colouring, as we like:
 
 ```{r}
-x = ct(data, "year", "cyl")[,-3] # Let's look at year models by cylinder count (minus those strange 5-cylinders).
+x = ct(data, "year", "cyl") # Let's look at year models by cylinder count.
 ctable(x)
 ```
 
 Looks like 8-cylinders were more popular in 2008 than would be expected, based on chi-square. *Wow. Such amaze.*
 
-### Crosstabulation: Tabset {.tabset}
+<br>
+
+## Crosstabulation: Tabset {.tabset}
 
 One last thing to demonstrate is the ct_tabset_dt() function. As I mentioned, we do a lot of these crosstabs. So many that we like to loop through our key demos and show the distribution of the responses based on them. The ct_tabset_dt() is designed to save me a lot of copy-pasting-with-slight-tweaks. You tell it how to generate a single crosstab (for a ctable() rendering), and it repeats it for all of your demos, with each product on its own tab. (Note, this code chunk is marked {.tabset}, and the message that appears below the function call is built-in for reference.)
 
@@ -80,20 +92,20 @@ Demos = c("cyl", "class", "drv")
 Tabs = c("By Cylinder Count", "By Car Class", "By Drivetrain")
 Params = c("Col1Name = 'Cylinders', chi2 = FALSE", "Col1Name = 'Car Class', chi2 = FALSE", "Col1Name = 'Drivetrain Type', chi2 = FALSE")
 
-ct_tabset_dt("ct(data,x,'year')",Demos, Tabs, Params, HeadingLvl = 4)
+ct_tabset_dt("ct(data,x,'year')",Demos, Tabs, Params, HeadingLvl = 3)
 ```
 
 `r paste(knit(text = ct.dt.out[['knit_code']]), collapse = '\n')`
 
-### {-}
+## {-}
 
 Fancy, eh?
 
-&nbsp;
+<br>
 
-### Multi-Coding
+## Multi-Coding
 
-This function was designed (by Mark Kane) in response to the troublesome approach of Qualtrics to multiple-response questions: it includes all of the selections of a respondent in a comma-separated list. The MultiCoding() function therefore tries to detect and split out these categorical multi-selects into dummy variables that you can then work with. This function is actually useful in a variety of contexts where we want to quickly create dummy variables. The mc_**ftw()** and mc_**ct()** functions are similar to the base versions (ftw, ct), but are built using MultiCoding output.
+This function was designed (by Mark Kane) in response to the troublesome approach of Qualtrics to multiple-response questions: it includes all of the selections of a respondent *in a comma-no-space-separated list*. The MultiCoding() function therefore tries to detect and split out these categorical multi-selects into dummy variables that you can then work with. This function is actually useful in a variety of contexts where we want to quickly create dummy variables. The mc_**ftw()** and mc_**ct()** functions are similar to the base versions (ftw, ct), but are built using MultiCoding output. ct() eventually moved over to use MultiCoding as the core tabulation method under the hood to ensure that all data gets summarized.
 
 ```{r}
 data = tibble(
@@ -124,17 +136,19 @@ And now for a crosstabulation - What is the Gender of those who select A's?
 data = bind_cols(data, tibble(c("F", "M", "M", "M", "M", "F", "M", "F", "F")))
 names(data) = c("Multi_select", "Gender")
 
-mc_ct(data, "Multi_select", "Multi_select_A", "Gender", label_1 = "Type A", label_0 = "Not Type A")
+MultiCoding(data, "Multi_select")
 # But ctable() looks so much better...
-x = mc_ct(data, "Multi_select", "Multi_select_A", "Gender", label_1 = "Type A", label_0 = "Not Type A")
+x = mc_ct(data, "Multi_select", "A", "Gender", label_1 = "Type A", label_0 = "Not Type A")
 ctable(x, Col1Name = "Gender")
 ```
 
-### Battery Questions & Graphs
+<br>
 
-Often we use question batteries in our surveys, where students are asked to agree-disagree or express satisfaction to a number of things at a time using the same scale. The data that comes from Qualtrics then includes all of these questions, with the question text and the response option, as part of the column headers. It's in that context that we created our battery_ftw() and frq_g_battery() functions.
+## Battery Questions & Graphs
 
-For this example, let's see the multi-selects we were fooling around with above in a graph. To do this, we'll use the battery_ftw() function, which works best given a "Questions" dataframe. Allow me to demonstrate what that might look like. Again, this approach is based on the way Qualtrics data tends to come down, and how we've attempted to "efficiently" deal with these situations.
+Often we use question batteries / matricies in our surveys, where students are asked to agree-disagree or express satisfaction to a number of things at a time using the same scale. The data that comes from Qualtrics then includes all of these questions, with the question text and the response option, as part of the column headers. It's in that context that we created our battery_ftw() and frq_g_battery() functions.
+
+For this example, let's see the multi-selects we were fooling around with above in a graph. To do this, we'll use the battery_ftw() function, which works best given a "Questions" dataframe. Allow me to demonstrate what that might look like by defining one below. Again, this approach is based on the way Qualtrics data tends to come down, and how we've attempted to "efficiently" deal with these situations. (We typically create a "Questions" dataframe for reference as a data-cleaning step before we work with the results.)
 
 ```{r}
 Questions = data.frame(Q = c("Multi_select_A",
@@ -146,6 +160,7 @@ Questions = data.frame(Q = c("Multi_select_A",
                                 "Select all that apply. - Cat C",
                                 "Select all that apply. - Cat D"))
 Questions
+
 MultiCoding(data, "Multi_select")
 x = MultiCoding(data, "Multi_select")
 battery_ftw(x, "Multi_select") 
@@ -157,7 +172,21 @@ y = battery_ftw(x, "Multi_select") %>%
 And now the graph.
 
 ```{r}
-frq_g_battery(y, "Category Distribution", N_mode = FALSE, Legend_Rows = 1)
+# The last two arguments are purely for aesthetics
+frq_g_battery(y, "Category Distribution", N_mode = FALSE, Legend_Rows = 1, Legend_Padding = 30) 
+```
+
+<br>
+
+## Historgram
+
+After making a few histograms to summarize course feedback results (meanscores), I randomly decided to build a histogram function. So here's an example. Let's look at highway MPG ratings for cars in 2008.
+
+```{r}
+data = filter(mpg, year == 2008)['hwy']
+# Obviously needs some work, but it's functional for now.
+histo(data, hwy, start = 10, stop = 38, bins = 25, discrete = F, title = "City MPG in 2008")
+
 ```
 
 <br><br>
