--- a/R/Code/Survey Data Functions - Examples.Rmd
+++ b/R/Code/Survey Data Functions - Examples.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Demonstrating Some Survey Data Functions"
 author: "Fraser Hay"
-date: "Last Updated: 06/29/2022"
+date: "Last Updated: 12/15/2022"
 output: 
   html_document:
     df_print: paged
@@ -75,7 +75,7 @@ But back to the data at-hand, about cars. `ct()` is what makes this happen - pro
 <br>
 
 ```{r, message=FALSE}
-ct(data, "year", "class")
+ct(data, year, class)
 ```
 
 <br>
@@ -86,7 +86,7 @@ But what *percentage* of our data was that, you ask? You have two choices to get
 
 <br>
 
-## Within the `ct()` call {-}
+## Within the `ct()` call (pct parameter) {-}
 
 ```{r, message=FALSE}
 # One is in the ct() call.
@@ -104,7 +104,7 @@ t
 
 ```{r, message=FALSE}
 # Or you can call row_percents() on the ct() base frequency output. It assumes everything but the first column is supposed to be switched to row percentages.
-t = row_percents(ct(data, "year", "class"))
+t = row_percents( ct(data, "year", "class") )
 t
 ```
 
@@ -139,16 +139,17 @@ One last thing to demonstrate is the `ct_tabset_dt()` function. As I mentioned, 
 
 ```{r, warning=FALSE}
 # Just need to do some setup here.
-Demos = c("cyl", "class", "drv")
-Tabs = c("By Cylinder Count", "By Car Class", "By Drivetrain")
-Params = c("Col1Name = 'Cylinders', chi2 = FALSE", "Col1Name = 'Car Class', chi2 = FALSE", "Col1Name = 'Drivetrain Type', chi2 = FALSE")
+Demos = c("cyl", "class", "drv") # The variables I want to crosstabulate by
+Tabs = c("By Cylinder Count", "By Car Class", "By Drivetrain") # The names of the tabs
+Params = c("Col1Name = 'Cylinders', chi2 = FALSE", "Col1Name = 'Car Class', chi2 = FALSE", "Col1Name = 'Drivetrain Type', chi2 = FALSE") # Parameters for each ctable() call, if applicable.
 
-# The below command spits out a reminder message:
+ct_tabset_dt("ct(data,x,'year')",Demos, Tabs, Params, HeadingLvl = 2)
+
+# The above command spits out a reminder message:
 # --- To preview the output, paste and run the following:
 # ct.dt.out[['dt']]
 # --- Include knit command *in-text* below for rendering (remember to end the tabset):
 # `r paste(knit(text = ct.dt.out[['knit_code']]), collapse = '\n')`
-ct_tabset_dt("ct(data,x,'year')",Demos, Tabs, Params, HeadingLvl = 2)
 ```
 
 `r paste(knit(text = ct.dt.out[['knit_code']]), collapse = '\n')`
@@ -158,7 +159,11 @@ ct_tabset_dt("ct(data,x,'year')",Demos, Tabs, Params, HeadingLvl = 2)
 ```{css, echo = FALSE}
 /* Don't mind me... But whenever you make a placeholder header like above (to force-close a tabset), you generate an empty entry in the table of contents listing on floating ToC documents like I have here. So I'm just going to hide that line... */
 #tocify-header7 > li {
-  display: none
+  display: none;
+}
+
+#section > h1 {
+  display: none;
 }
 ```
 
@@ -168,7 +173,7 @@ Fancy, eh? And sometimes I even have to loop `ct_tabset_dt()`'s together, using 
 
 # Multi-Coding {.tabset}
 
-This very important function was designed (by Mark Kane) in response to the troublesome approach of Qualtrics to multiple-response questions: it includes all of the selections of a respondent *in a comma-no-space-separated list*. The `MultiCoding()` function therefore tries to detect and split out these categorical multi-selects into dummy variables that you can then work with. This function is actually useful in a variety of contexts where we want to quickly create dummy variables. The `mc_`**`ftw()`** and `mc_`**`ct()`** functions are therefore similar to the base versions (`ftw`, `ct`), but are built using `MultiCoding` output. `ct()` eventually moved over to use `MultiCoding` as the core tabulation method under the hood to ensure that all data gets summarized.
+This very important function was designed (by Mark Kane) in response to the troublesome approach of Qualtrics to multiple-response questions: it includes all of the selections of a respondent *in a comma-no-space-separated list* (though recently I've seen datasets spit out with occasional space-comma-no-space items... No idea why. I have had to recode them to be uniform). The `MultiCoding()` function  tries to detect and split out these categorical multi-selects (using that delimiter) into dummy variables that you can then work with. This function is actually useful in a variety of contexts where we want to quickly create dummy variables. The `mc_`**`ftw()`** and `mc_`**`ct()`** functions are therefore similar to the base versions (`ftw`, `ct`), but are built using `MultiCoding` output. Though even `ct()` now uses `MultiCoding` as the core tabulation method under the hood to ensure that all data gets summarized in cases where a "select all that apply" question is used.
 
 <br>
 
@@ -189,7 +194,7 @@ data
 MultiCoding(data, "Multi_select")
 mc_ftw(data, "Multi_select")
 
-# Notice how in the above output, the "Multi_select_" is automatically truncated off the categories.
+# Notice how in the above output, the "Multi_select_" is automatically truncated off the category (column) names.
 
 x = mc_ftw(data, "Multi_select", return_N = TRUE) # return_n provides the actual number of valid cases, in a list object...
 frq_g_simple(x[[1]], "Graphing a Multi-select Question", Custom_N = x[[2]]) # Which we can then utilize for the actual N in this graph...
@@ -197,7 +202,7 @@ frq_g_simple(x[[1]], "Graphing a Multi-select Question", Custom_N = x[[2]]) # Wh
 
 <br>
 
-And now for a crosstabulation - What is the Gender of those who select A's? I've got two options for you.
+And now for a crosstabulation. With our data here:
 
 ```{r, message=FALSE, warning=FALSE}
 # Generate some Gender data...
@@ -205,6 +210,10 @@ data = bind_cols(data, tibble(c("F", "M", "M", "M", "M", "F", "M", "F", "F")))
 names(data) = c("Multi_select", "Gender")
 data
 ```
+
+<br>
+
+Q: What is the Gender of those who select A's? I've got two options for you.
 
 <br>
 
@@ -228,10 +237,10 @@ x
 # As you can see, we could try to divide 'A' by the N= values to get the proportion of each category like the other tab's ctable() output. This is inefficient, but just to demonstrate...
 x %>% 
   select(1:2) %>% 
-  mutate(N = as.numeric(gsub(".*= (.+)).*", "\\1", Gender)), # Extracting the "N=" value.
-         `Not Type A` = N - A) %>% 
+  mutate(N = as.numeric(gsub(".*= (.+)).*", "\\1", Gender))) %>% # Extracting the "N=" value.
+  set(1,3,sum(.$N, na.rm=T)) %>% # Cheating, I know, since I'm manually assigning a value here. Maybe I need to re-write this function. :P
+  mutate(`Not Type A` = N - A) %>% 
   select(-N) %>% 
-  set(1,3,2) %>% # Cheating, I know, since I'm manually assigning a value here. Maybe I need to re-write this function. :P
   ctable()
 ```
 
@@ -258,7 +267,7 @@ Questions
 MultiCoding(data, "Multi_select")
 x = MultiCoding(data, "Multi_select")
 battery_ftw(x, "Multi_select") 
-# Note, there is a skip_Questions argument for battery_ftw(), if you don't have a Questions dataframe to reference.
+# Note, there is a Questions_df argument for battery_ftw() - if you don't have a Questions dataframe to reference, set to NULL.
 y = battery_ftw(x, "Multi_select") %>% 
   rename("Not in Category" = `0`, "In Category" = `1`) # Normally I wouldn't need to rename them, as the values would be the categories in the question; but MultiCoding(), which created my data, just creates dummies, 0/1.
 ```
@@ -276,6 +285,17 @@ frq_g_battery(y, "Category Distribution", N_mode = FALSE, Legend_Rows = 1, Legen
 
 <br>
 
+We can also make these graphs "divergent", if needed.
+
+<br>
+
+```{r, warning = FALSE}
+# Note the "divergent" setting, where we define what categories should be on either side of the line.
+frq_g_battery(y, "Category Distribution", N_mode = FALSE, Legend_Rows = 1, Legend_Padding = 30, divergent = list(left = c("Not in Category"), right = c("In Category")))
+```
+
+<br>
+
 # Overlap Graph
 
 Occasionally people want to see a cross-tabulation in a graph format. Here's one idea for doing that.
@@ -283,8 +303,8 @@ Occasionally people want to see a cross-tabulation in a graph format. Here's one
 <br>
 
 ```{r, fig.height=4}
-ct(mpg, "year", "drv")[-1,] %>% # Note: using [-1,] to remove 'overall' summary line
-  frq_g_overlap("Drivetrain by Year", spacing = 0.2, bar_width = 0.33, border = T, Fcolour = "Greens", label_font_size = 5)
+ct(mpg, year, drv)[-1,] %>% # Note: using [-1,] to remove 'overall' summary line
+  frq_g_overlap("Drivetrain by Year", spacing = 0.22, bar_width = 0.30, border = T, Fcolour = "Greens", label_font_size = 5)
 ```
 
 # Histogram
@@ -317,4 +337,4 @@ histo(data, hwy, title = "City MPG in 2008", frq = T)
 <br>
 
 ***Questions or comments?*** <br>
-Email me: fhay(at)conestogac.on.ca
+Email me: fhay (at) conestogac.on.ca
